Holy crap, I should commit more often. HL packet muxing, blockdev server compiles but is untested.

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,12 @@
 *.o
+*.a
 recv/recv
 server/bbpsender
 keys/genkey
 keys/privkey.inc
 keys/pubkey.inc
 server/tst
+blocksend/blocksend
+lyric_test/lyrics
+lyric_test/never.txt
+recv/tst
