Change blockdev desc into private per-driver struct; added minimum changeid to flatflash driver

--- a/recv/Makefile
+++ b/recv/Makefile
@@ -1,7 +1,7 @@
 OBJS=main.o ../common/crc16.o sha256.o uECC.o chksign.o defec.o serdec.o hexdump.o subtitle.o hldemux.o \
-		bd_emu.o blockdecode.o blkidcache_noop.o partemu/partemu.o bd_flatflash.o
+		bd_emu.o blockdecode.o blkidcache_mlvl.o partemu/partemu.o bd_flatflash.o
 TARGET=recv
-CFLAGS=-ggdb -I ../common -I ../micro-ecc -I ../sha256 -I partemu
+CFLAGS=-ggdb -I ../common -I ../micro-ecc -I ../sha256 -I partemu -Og
 LDFLAGS=
 
 all: $(TARGET)
