--- a/server/Makefile
+++ b/server/Makefile
@@ -1,6 +1,6 @@
 OBJS=main.o sender.o fec.o serdes.o ../common/crc16.o sha256.o uECC.o sign.o packetloss.o hlmux.o
 TARGET=bbpsender
-CFLAGS=-ggdb -I ../common -I ../micro-ecc -I ../sha256
+CFLAGS=-ggdb -I ../common -I ../micro-ecc -I ../sha256 -ggdb
 LDFLAGS=
 
 all: $(TARGET)
