--- a/recv/Makefile
+++ b/recv/Makefile
@@ -1,5 +1,5 @@
 OBJS=main.o ../common/crc16.o sha256.o uECC.o chksign_mbedtls.o defec.o serdec.o hexdump.o subtitle.o hldemux.o \
-		bd_emu.o blockdecode.o blkidcache_mlvl.o partemu/partemu.o bd_flatflash.o
+		bd_emu.o blockdecode.o blkidcache_mlvl.o partemu/partemu.o bd_flatflash.o hkpackets.o powerdown.o
 TARGET=recv
 CFLAGS=-ggdb -I ../common -I ../micro-ecc -I ../sha256 -I partemu -Og
 LDFLAGS=-lmbedtls -lmbedcrypto
