--- a/esp32-recv/components/bpp-recv/Makefile
+++ b/esp32-recv/components/bpp-recv/Makefile
@@ -1,9 +1,9 @@
 #Makefile for a host build of the receiver.
 
-OBJS=main.o ../common/crc16.o sha256.o uECC.o chksign_mbedtls.o defec.o serdec.o hexdump.o subtitle.o hldemux.o \
+OBJS=main.o chksign_mbedtls.o defec.o serdec.o hexdump.o subtitle.o hldemux.o \
 		bd_emu.o blockdecode.o blkidcache_mlvl.o partemu/partemu.o bd_flatflash.o hkpackets.o powerdown.o
 TARGET=recv
-CFLAGS=-ggdb -I ../common -I ../micro-ecc -I ../sha256 -I partemu -Og
+CFLAGS=-ggdb -I ../common -I ../micro-ecc -I partemu -Og -DHOST_BUILD
 LDFLAGS=-lmbedtls -lmbedcrypto
 
 all: $(TARGET)
