Move keygen to mbedtls for easier curve switching

--- a/keys/Makefile
+++ b/keys/Makefile
@@ -1,7 +1,8 @@
-CFLAGS=-I../micro-ecc -ggdb
+CFLAGS=-I../micro-ecc -ggdb -Wall
+LDFLAGS=-lmbedtls -lmbedcrypto -ggdb
 
-genkey: genkey.o uECC.o
-	$(CC) -o $@ $^
+genkey: genkey.o
+	$(CC) -o $@ $^ $(LDFLAGS)
 
 uECC.o: ../micro-ecc/uECC.c ../micro-ecc/uECC.h
 	$(CC) $(CFLAGS) -c -o $@ $<
