--- a/server/Makefile
+++ b/server/Makefile
@@ -1,7 +1,7 @@
-OBJS=main.o sender.o fec.o serdes.o ../common/crc16.o sha256.o uECC.o sign-mbedtls.o packetloss.o hlmux.o
+OBJS=main.o sender.o fec.o serdes.o ../common/crc16.o sha256.o uECC.o sign-ed25519.o packetloss.o hlmux.o
 TARGET=bbpsender
-CFLAGS=-ggdb -I ../common -I ../micro-ecc -I ../sha256 -ggdb
-LDFLAGS=-lmbedtls -lmbedcrypto
+CFLAGS=-ggdb -I ../common -I ../micro-ecc -I ../sha256 -ggdb -I ../ed25519/src
+LDFLAGS=-lmbedtls -lmbedcrypto ../ed25519/src/libed25519.a
 
 all: $(TARGET)
 
@@ -12,7 +12,7 @@ uECC.o: ../micro-ecc/uECC.c ../micro-ecc/uECC.h
 	$(CC) $(CFLAGS) -c -o $@ $<
 
 $(TARGET): $(OBJS)
-	$(CC) -o $@ $(LDFLAGS) $^
+	$(CC) -o $@  $^ $(LDFLAGS)
 
 clean:
 	rm -f $(OBJS) $(TARGET)
