--- a/blocksend/firmware.ini
+++ b/blocksend/firmware.ini
@@ -2,6 +2,7 @@ file=../esp32-recv/build/badge-bpp-bootstrap.bin
 stateprefix=./badge-bpp-bootstrap
 size=1572864
 streamid=1
-packetspermin=120
+packetspermin=80
 pctoldpackets=98
+blockflashtimems=800
 
