--- a/server/Makefile
+++ b/server/Makefile
@@ -1,7 +1,7 @@
 OBJS=main.o sender.o fec.o serdes.o ../common/crc16.o sha256.o uECC.o sign-ed25519.o packetloss.o hlmux.o
 TARGET=bbpsender
-CFLAGS=-ggdb -I ../common -I ../micro-ecc -I ../sha256 -ggdb -I ../ed25519/src
-LDFLAGS=-lmbedtls -lmbedcrypto ../ed25519/src/libed25519.a
+CFLAGS=-ggdb -std=gnu99 -I ../common -I ../micro-ecc -I ../sha256 -ggdb -I ../ed25519/src
+LDFLAGS=../ed25519/src/libed25519.a
 
 all: $(TARGET)
 
