--- a/.travis.yml
+++ b/.travis.yml
@@ -47,7 +47,7 @@ script:
   # Make genkey and generate keys
   - cd keys
   - make
-  - ./genkey
+  - ./genkey || echo $?
   - cd ..
   # Compile the server
   - cd server
