Added esp-idf and nodemcu-prebuilt-toolchains, make Travis build esp32-recv

--- a/.travis.yml
+++ b/.travis.yml
@@ -53,11 +53,8 @@ script:
   - cd server
   - make
   - cd ..
-
-  # TODO compile ESP32 client ;)    
+  # Compile ESP32 client code
+  source set_env.sh
+  cd esp32-recv
+  make
   
-  
-  
-  
-  
-
