--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "micro-ecc"]
 	path = micro-ecc
 	url = https://github.com/kmackay/micro-ecc.git
+[submodule "esp-idf"]
+	path = esp-idf
+	url = https://github.com/espressif/esp-idf
+[submodule "nodemcu-prebuilt-toolchains"]
+	path = nodemcu-prebuilt-toolchains
+	url = https://github.com/jmattsson/nodemcu-prebuilt-toolchains
