Travis notifications added

--- a/.travis.yml
+++ b/.travis.yml
@@ -58,3 +58,12 @@ script:
   - cd esp32-recv
   - make
 
+notifications:
+  irc:
+    channels:
+      - "chat.freenode.net#sha2017-badge"
+      - "chat.freenode.net#sha2017-badge-dev"
+    on_success: change
+    on_failure: always
+    use_notice: true
+    skip_join: true
