--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,7 @@ install:
   git submodule update --init --recursive
 
 script:
+  - make ed25519       
   - make keys      
   - make
   - source set_env.sh		
