Encode dependencies in Makefile

--- a/ed25519/src/Makefile
+++ b/ed25519/src/Makefile
@@ -3,3 +3,7 @@ OBJS:=add_scalar.o fe.o ge.o key_exchange.o keypair.o sc.o seed.o sha512.o sign.
 
 libed25519.a: $(OBJS)
 	ar cr $@ $^
+
+.PHONY: clean
+clean:
+	-rm libed25519.a $(OBJS)
