--- a/server/Makefile
+++ b/server/Makefile
@@ -1,5 +1,5 @@
 OBJS=main.o sender.o fec.o serdes.o ../common/crc16.o sha256.o uECC.o sign-ed25519.o packetloss.o hlmux.o
-TARGET=bbpsender
+TARGET=bppsender
 CFLAGS=-ggdb -std=gnu99 -I ../common -I ../micro-ecc -I ../sha256 -ggdb -I ../ed25519/src
 LDFLAGS=../ed25519/src/libed25519.a
 
