--- a/server/Makefile
+++ b/server/Makefile
@@ -1,9 +1,12 @@
-OBJS=main.o sender.o fec.o serdes.o ../common/crc16.o sha256.o uECC.o sign-ed25519.o packetloss.o hlmux.o fec_parity.o
+OBJS=main.o sender.o fec.o serdes.o ../common/crc16.o sha256.o uECC.o sign-ed25519.o packetloss.o hlmux.o fec_parity.o redundancy.o fec_rs.o
 TARGET=bppsender
-CFLAGS=-ggdb -std=gnu99 -I ../common -I ../micro-ecc -I ../sha256 -ggdb -I ../ed25519/src
+CFLAGS=-ggdb -std=gnu99 -I ../common -I ../micro-ecc -I ../sha256 -ggdb -I ../ed25519/src -I../redundancy
 LDFLAGS=../ed25519/src/libed25519.a
 
 all: $(TARGET)
+
+redundancy.o: ../redundancy/redundancy.c
+	$(CC) $(CFLAGS) -c -o $@ $<
 
 sha256.o: ../sha256/sha256.c ../sha256/sha256.h
 	$(CC) $(CFLAGS) -c -o $@ $<
