Fixed irritating typo; hooked up bd_ropart; fixed it not to crash. Unfortunately it does not work yet...

--- a/blocksend/Makefile
+++ b/blocksend/Makefile
@@ -1,6 +1,6 @@
 OBJS:=main.o ini.o
 CFLAGS:=-ggdb -std=gnu99 -I../bppsource -I../common
-LDFLAGS:=-L../bppsource -lbppsource
+LDFLAGS:=-L../bppsource -lbppsource -ggdb
 
 blocksend: $(OBJS)
 	$(CC) -o $@ $^ $(LDFLAGS)
