--- a/esp32-recv/components/bpp-recv/Makefile
+++ b/esp32-recv/components/bpp-recv/Makefile
@@ -1,10 +1,12 @@
 #Makefile for a host build of the receiver.
 
 OBJS=main.o chksign_ed25519.o defec.o serdec.o hexdump.o subtitle.o hldemux.o \
-		bd_emu.o blockdecode.o blkidcache_mlvl.o partemu/partemu.o bd_flatflash.o\
-		 hkpackets.o powerdown.o defec_rs.o defec_parity.o bma.o
+		bd_emu.o blockdecode.o blkidcache_mlvl.o partemu/partemu.o bd_flatflash.o \
+		 hkpackets.o powerdown.o defec_rs.o defec_parity.o bma.o ../redundancy/redundancy.o \
+		bd_ropart.o 
 TARGET=recv
-CFLAGS=-ggdb -I ../common -I ../micro-ecc -I ../../../ed25519/src -I partemu -Og -DHOST_BUILD
+CFLAGS=-ggdb -I ../common -I ../micro-ecc -I ../../../ed25519/src -I partemu \
+		-Og -DHOST_BUILD  -I../redundancy
 LDFLAGS=-lmbedtls -lmbedcrypto ../../../ed25519/src/libed25519.a
 
 all: $(TARGET)
